Fix spacing issue in footers

--- a/static/style/master.css
+++ b/static/style/master.css
@@ -72,4 +72,7 @@ footer p {
 	.container {
 		width: 90%;
 	}
+	footer div#links ul {
+		margin: 0 5%;
+	}
 }
